Сборка app-image файла