@@ -39,9 +39,10 @@ keytool -genkey -alias exampleKey -keyalg RSA -keysize 4096 -validity 365 -keyst
 
 Установить переменные окружения:
 
-- `$JAVA_HOME` - путь до Java 21 (Пример: /home/username/.jdks/openjdk-21.0.7);
-- `$PATH_TO_FX` - путь до Java FX SDK (Пример: /home/username/.jdks/javafx-sdk-21.0.7/lib);
-- `$PATH_TO_FX_MODS` - путь до Java FX jmods (Пример: /home/username/.jdks/javafx-jmods-21.0.7).
+- `$USER` - имя текущего пользователя, в Linux уже установлен;
+- `$JAVA_HOME` - путь до Java 21 (Пример: /home/$USER/.jdks/openjdk-21.0.7);
+- `$PATH_TO_FX` - путь до Java FX SDK (Пример: /home/$USER/.jdks/javafx-sdk-21.0.7/lib);
+- `$PATH_TO_FX_MODS` - путь до Java FX jmods (Пример: /home/$USER/.jdks/javafx-jmods-21.0.7).
 
 Получить зависимости проекта без учёта зависимостей не из JDK:
 
@@ -86,6 +87,101 @@ $JAVA_HOME/bin/jdeps --class-path="./target/libs" --module-path="./target/libs" 
 $JAVA_HOME/bin/jlink --verbose --module-path $PATH_TO_FX_MODS --add-modules java.base,javafx.controls,javafx.fxml --strip-debug --no-man-pages --no-header-files --compress=2 --output target/java-runtime
 ```
 
+* Скопировать немодульные либы из репозитория Мавен для превращения их в модульные можно, выполнив файл ./libForModularize/copyFromM2.sh:
+
+* Генерация module-info.java для reactive-streams-1.0.3.jar:
+
+```bash
+$JAVA_HOME/bin/jdeps --ignore-missing-deps --multi-release=21 --generate-module-info libForModularize libForModularize/reactive-streams-1.0.3.jar
+```
+
+* Компиляция module-info.java в module-info.class для org.reactivestreams:
+
+```bash
+$JAVA_HOME/bin/javac --patch-module org.reactivestreams=libForModularize/reactive-streams-1.0.3.jar libForModularize/org.reactivestreams/versions/21/module-info.java
+```
+
+* Вытащить файл ./libForModularize/org.reactivestreams/versions/21/module-info.class в папку ./libForModularize:
+
+```bash
+mv ./libForModularize/org.reactivestreams/versions/21/module-info.class ./libForModularize
+```
+
+* Обновить reactive-streams-1.0.3.jar, внедрив в него module-info.class:
+
+```bash
+$JAVA_HOME/bin/jar uf libForModularize/reactive-streams-1.0.3.jar -C libForModularize module-info.class
+```
+
+* Удалить лишнюю папку и module-info.class:
+
+```bash
+rm -rf ./libForModularize/org.reactivestreams && \
+rm -f ./libForModularize/module-info.class
+```
+
+* Генерация module-info.java для r2dbc-spi-1.0.0.RELEASE.jar:
+
+```bash
+$JAVA_HOME/bin/jdeps --ignore-missing-deps --multi-release=21 --generate-module-info libForModularize libForModularize/r2dbc-spi-1.0.0.RELEASE.jar
+```
+
+* Компиляция module-info.java в module-info.class для r2dbc.spi:
+
+```bash
+$JAVA_HOME/bin/javac --patch-module r2dbc.spi=libForModularize/r2dbc-spi-1.0.0.RELEASE.jar libForModularize/module-info.java
+```
+
+* Обновить r2dbc-spi-1.0.0.RELEASE.jar, внедрив в него module-info.class:
+
+```bash
+$JAVA_HOME/bin/jar uf libForModularize/r2dbc-spi-1.0.0.RELEASE.jar -C libForModularize module-info.class
+```
+
+* Генерация module-info.java для h2-2.2.224.jar:
+
+```bash
+$JAVA_HOME/bin/jdeps --ignore-missing-deps --multi-release=21 --generate-module-info libForModularize libForModularize/h2-2.2.224.jar
+```
+
+* Компиляция module-info.java в module-info.class для com.h2database:
+
+```bash
+$JAVA_HOME/bin/javac --patch-module com.h2database=libForModularize/h2-2.2.224.jar libForModularize/module-info.java
+```
+
+* Обновить h2-2.2.224.jar, внедрив в него module-info.class:
+
+```bash
+$JAVA_HOME/bin/jar uf libForModularize/h2-2.2.224.jar -C libForModularize module-info.class
+```
+
+Получить зависимости проекта без учёта зависимостей не из JDK:
+
+```bash
+$JAVA_HOME/bin/jdeps --module-path $PATH_TO_FX:"/home/alex/.m2/repository/org/jooq/jooq/3.19.7/jooq-3.19.7.jar":"./libForModularize/reactive-streams-1.0.3.jar":"./libForModularize/r2dbc-spi-1.0.0.RELEASE.jar":"/home/alex/.m2/repository/org/bouncycastle/bcpkix-jdk15on/1.70/bcpkix-jdk15on-1.70.jar":"/home/alex/.m2/repository/org/bouncycastle/bcutil-jdk15on/1.70/bcutil-jdk15on-1.70.jar":"/home/alex/.m2/repository/org/bouncycastle/bcprov-jdk15on/1.70/bcprov-jdk15on-1.70.jar":"/home/alex/.m2/repository/org/apache/logging/log4j/log4j-api/2.23.1/log4j-api-2.23.1.jar" --add-modules org.reactivestreams,r2dbc.spi,org.bouncycastle.pkix,org.bouncycastle.util,org.bouncycastle.provider,org.apache.logging.log4j --multi-release=21 --print-module-deps target/CryptoFile.jar
+```
+
+Генерация JRE для модульного приложения:
+
+```bash
+$JAVA_HOME/bin/jlink --output target/java-runtime --module-path $PATH_TO_FX_MODS:"/home/alex/.m2/repository/org/jooq/jooq/3.19.7/jooq-3.19.7.jar":"./libForModularize/reactive-streams-1.0.3.jar":"./libForModularize/r2dbc-spi-1.0.0.RELEASE.jar":"./libForModularize/h2-2.2.224.jar":"/home/alex/.m2/repository/org/bouncycastle/bcpkix-jdk15on/1.70/bcpkix-jdk15on-1.70.jar":"/home/alex/.m2/repository/org/bouncycastle/bcutil-jdk15on/1.70/bcutil-jdk15on-1.70.jar":"/home/alex/.m2/repository/org/bouncycastle/bcprov-jdk15on/1.70/bcprov-jdk15on-1.70.jar":"/home/alex/.m2/repository/org/apache/logging/log4j/log4j-api/2.23.1/log4j-api-2.23.1.jar":"/home/alex/.m2/repository/org/projectlombok/lombok/1.18.32/lombok-1.18.32.jar" --add-modules "java.base,jdk.localedata,javafx.controls,javafx.fxml,javafx.graphics,lombok,org.bouncycastle.pkix,org.bouncycastle.provider,com.h2database,org.jooq,org.reactivestreams,r2dbc.spi,org.bouncycastle.pkix,org.bouncycastle.util,org.bouncycastle.provider,org.apache.logging.log4j" --ignore-signing-information
+```
+
+Копирование собранного CryptoFile.jar в папку /lib для выполнения последующей генерации:
+
+```bash
+mkdir -p target/lib && cp target/CryptoFile.jar target/lib/CryptoFile.jar
+```
+
+Сборка исполняемого файла:
+
+```bash
+$JAVA_HOME/bin/jpackage --type app-image --name CryptoFile --input target/lib --main-jar CryptoFile.jar --runtime-image target/java-runtime --main-class vi.al.ro.Main --dest target/installer --java-options "-Dprism.order=sw,j2d -Dprism.verbose=true -Xmx2048m" --app-version 1.0-SNAPSHOT --vendor "RoyalVitamin" --copyright "Copyright © 2025 RAV"
+```
+
+Теперь приложение (`./target/installer/CryptoFile/bin/CryptoFile`) можно запустить!
+
 SEE [1](https://stackoverflow.com/a/47222302/9401964) comment:
 For anyone attempting to update a legacy JAR with a generated module-info, this sequence of commands is what I got to 
 work: `jdeps --generate-module-info . <jar_path>`, `javac --patch-module <module_name>=<jar_path> 
@@ -109,4 +205,4 @@ $JAVA_HOME/bin/jpackage --type app-image --name CryptoFile --input target/lib --
 1. Build native exec [1](https://inside.java/2023/11/14/package-javafx-native-exec/);
 2. jPackage [1](https://docs.oracle.com/en/java/javase/21/jpackage/packaging-overview.html);
 3. Automatic modules [1](https://stackoverflow.com/questions/46741907/what-is-an-automatic-module);
-4. Что делать с немодульными зависимостями [1](https://stackoverflow.com/a/77656893/9401964), [2](https://medium.com/azulsystems/using-jlink-to-build-java-runtimes-for-non-modular-applications-9568c5e70ef4).
+4. Что делать с немодульными зависимостями [1](https://stackoverflow.com/a/77656893/9401964), [2](https://medium.com/azulsystems/using-jlink-to-build-java-runtimes-for-non-modular-applications-9568c5e70ef4), [3](https://youtu.be/bO6f3U4i0A0?si=kyoaCPCzwUPzCLVW).
